--- a/src/main/resources/templates/page/en/about.html
+++ b/src/main/resources/templates/page/en/about.html
@@ -35,7 +35,7 @@
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference On Advances in Biological<br/>
+              International Conference on Advances in Biological<br/>
 							Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
@@ -97,10 +97,10 @@
 
           <p><strong>Important Dates</strong></p>
           <p>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Check-in Time：A. December 26, 2019 ---- 15:00-17:00</br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Check-in Time: A. December 26, 2019 ---- 15:00-17:00</br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B. December 27, 2019 ---- 8:00-8:40
 					</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Abstract Deadline：Oct. 20, 2019</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Abstract Deadline: Oct. 20, 2019</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Registration Deadline: Oct. 31, 2019 (After Nov.1, only Late Registration Type available)</p>
 					
 					<p><strong>For more information about visa, traffic, accommodation and others, please click <a title="Venue" class="pointer" href="/venue" style="color: #102cf7" target="_blank"><u>Venue</u></a> for details.</strong></p>
@@ -172,11 +172,11 @@
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
-            <p>Secretary：Jason Sun, Alex Liu</p>
-						<p>Email：icabst@apanse.com</p>
-            <p>Phone：86-0371-63226982</p>
-            <p>Mobile：+86-18137471420</p>
-            <p>Wechat：APANSE</p>
+            <p>Secretary: Jason Sun, Alex Liu</p>
+						<p>Email: icabst@apanse.com</p>
+            <p>Phone: 86-0371-63226982</p>
+            <p>Mobile: +86-18137471420</p>
+            <p>Wechat: APANSE</p>
         </ul>
     </div>
       
@@ -190,7 +190,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
