--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -37,7 +37,7 @@
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference On Advances in Biological<br/>
+              International Conference on Advances in Biological<br/>
 							Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
@@ -100,10 +100,10 @@
 					 in all fields of Biological Science and Technology, discuss the practical challenges encountered recommend better solutions for biotechnology. 
 					 The last conference, successfully held in Zhengzhou, China, attracted about 200 participants from all over the world.
 					 <br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thailand: “The Land of Smiles”. Thailand is an incredible destination with palaces, temples, markets, shopping, spas, friendly people, 
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thailand: "The Land of Smiles". Thailand is an incredible destination with palaces, temples, markets, shopping, spas, friendly people, 
 					fine dining and some of the best hotels in the world. The word 'Thai' means freedom, so literally Thailand is the land of freedom and Thailand proudly proclaims that. 
 					Thailand is located in Southeastern Asia bordering the Andaman Sea and the Gulf of Thailand. 
-					In addition to being one of the world’s most rewarding travel destinations, Thailand is also the most convenient gateway for travelling 
+					In addition to being one of the world's most rewarding travel destinations, Thailand is also the most convenient gateway for travelling 
 					to Myanmar, Laos, Cambodia, Vietnam, Singapore, Malaysia and Indonesia. Thailand is without a doubt one of the most exotic destinations in Asia.
 					<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please circulate ICABST2019 to the attention of any of your colleagues who may be interested in participating 
@@ -117,10 +117,10 @@
         <div class="background5" style="padding-left:55px;">News</div>
 				<div class="public_p pl-30">
         <ul>
-					<li><a href="/submit" target="_blank" style="color: #102cf7">Onilne Registration System is open to Oct. 31 </a></li>
-					<li><a href="/program" target="_blank" style="color: #102cf7">Primary Conference Program has been issued</a></li>
-          <li><a href="/about" target="_blank" style="color: #102cf7">ICABST2019 will be divided to 7 Sessions</a></li>
-					<li><a href="/venue" target="_blank" style="color: #102cf7">For visa, venue and accommodations, please click "Venue" for details</a></li>
+					<li><a href="/submit" target="_blank" style="color: #102cf7"><u>Onilne Registration System is open to Oct. 31</u></a></li>
+					<li><a href="/program" target="_blank" style="color: #102cf7"><u>Primary Conference Program has been issued</u></a></li>
+          <li><a href="/about" target="_blank" style="color: #102cf7"><u>ICABST2019 will be divided to 7 Sessions</u></a></li>
+					<li><a href="/venue" target="_blank" style="color: #102cf7"><u>For visa, venue and accommodations, please click "Venue" for details</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
@@ -129,10 +129,10 @@
         <div class="background5" style="padding-left:55px;">Links</div>
         <div class="url pd-5">
           <ul>
-            <li ><a class="time pl-25 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; Countdown:&nbsp;<span id="content"></span>&nbsp;&nbsp;days</a></li>
-            <li ><a class="announcement" href="/about" target="_blank">&emsp;&emsp;&emsp;Announcement</a></li>
-            <li ><a class="invitation" href="/cncfp" target="_blank">&emsp;&emsp;&emsp;Invitation</a></li>
-						<li ><a class="article" href="/cncfp" target="_blank">&emsp;&emsp;&emsp;Templete</a></li>
+            <li ><a class="time pl-25 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>Countdown:&nbsp;<span id="content"></span>&nbsp;&nbsp;days</strong></a></li>
+            <li ><a class="announcement" href="/about" target="_blank">&emsp;&emsp;&emsp;<strong>Conference Flyer</strong></a></li>
+            <li ><a class="invitation" href="/cncfp" target="_blank">&emsp;&emsp;&emsp;<strong>Registration Form</strong></a></li>
+						<li ><a class="article" href="/cncfp" target="_blank">&emsp;&emsp;&emsp;<strong>Abstract Templete</strong></a></li>
           </ul>
           <div class="clear"></div>
         </div>
@@ -166,11 +166,11 @@
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
-            <p>Secretary：Jason Sun, Alex Liu</p>
-						<p>Email：icabst@apanse.com</p>
-            <p>Phone：86-0371-63226982</p>
-            <p>Mobile：+86-18137471420</p>
-            <p>Wechat：APANSE</p>
+            <p>Secretary: Jason Sun, Alex Liu</p>
+						<p>Email: icabst@apanse.com</p>
+            <p>Phone: 86-0371-63226982</p>
+            <p>Mobile: +86-18137471420</p>
+            <p>Wechat: APANSE</p>
         </ul>
     </div>
     
@@ -190,6 +190,8 @@
       <li><img src="../img/4--sciencemeeting-logo.jpg"/></li>
       <li><img src="../img/5--bwp-logo.png"/></li>
       <li><img src="../img/6--LOGO_EBW.jpg"/></li>
+			<li><img src="../img/7--IOP.png"/></li>
+			<li><img src="../img/8--AIP.png"/></li>
       <div class="clear"></div>
     </ul>
   </div>
@@ -198,7 +200,7 @@
 
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
