--- a/src/main/resources/templates/page/en/registration.html
+++ b/src/main/resources/templates/page/en/registration.html
@@ -35,7 +35,7 @@
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference On Advances in Biological<br/>
+              International Conference on Advances in Biological<br/>
 							Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
@@ -70,16 +70,16 @@
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Registration</div>
       <div class="public_p pb-20 pl-30">
-        <p>ICABST2019 encourages students, scientists, researchers and scholars from all the world to participate the conference and share latest research.</p>
+        <p>ICABST2019 encourages students, scientists, researchers and scholars from the entire world to participate in the conference and share latest research.</p>
         <p>
-          <strong>Registration Steps：</strong>
+          <strong>Registration Steps: </strong>
         </p>
         <p>
-          1. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System(Less than 10MB)</strong></u></a>，and choose registration type<br/>
-					Or download the Registration Form, fill the information needed and send it by email (icabst@apanse.com) with your abstract.
+          1. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System(Less than 10MB)</strong></u></a>, and choose registration type<br/>
+					Or download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.
         </p>
         <p>
-          2. The abstract will be processed for peer review by conference committee, if accepted, the Acceptance Letter and Invoice will be issued in 7-10 working days.
+          2. The abstract will be processed for peer review by conference committee, if accepted the Acceptance Letter and Invoice will be issued in 7-10 working days.
         </p>
         <p>
           3. After receiving the acceptance and invoice, you should finish the payment of conference registration fee in time. As soon as your payment is finalized, you will receive a confirmation. Expected processing will be 1-3 days. 
@@ -141,13 +141,13 @@
           If the registrant is unable to attend, and is not in a position to transfer his/her participation to another person, then the following refund arrangements apply. 
         </p>
         <p>
-          1）Before Oct. 31, Full Refund
+          1) Before Oct. 31, Full Refund
         </p>
         <p>
-          2）During Nov. 1 and Nov. 30, 30-50% of payment Refund
+          2) During Nov. 1 and Nov. 30, 30-50% of payment Refund
         </p>
         <p>
-          3）After Dec. 1, No Refund.
+          3) After Dec. 1, No Refund.
         </p>
         <p>
           *All cancellations must be made and received in writing.<br/>
@@ -183,11 +183,11 @@
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
-            <p>Secretary：Jason Sun, Alex Liu</p>
-						<p>Email：icabst@apanse.com</p>
-            <p>Phone：86-0371-63226982</p>
-            <p>Mobile：+86-18137471420</p>
-            <p>Wechat：APANSE</p>
+            <p>Secretary: Jason Sun, Alex Liu</p>
+						<p>Email: icabst@apanse.com</p>
+            <p>Phone: 86-0371-63226982</p>
+            <p>Mobile: +86-18137471420</p>
+            <p>Wechat: APANSE</p>
         </ul>
     </div>
     
@@ -201,7 +201,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
