--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -35,7 +35,7 @@
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference On Advances in Biological<br/>
+              International Conference on Advances in Biological<br/>
 							Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
@@ -199,11 +199,11 @@
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
-            <p>Secretary：Jason Sun, Alex Liu</p>
-						<p>Email：icabst@apanse.com</p>
-            <p>Phone：86-0371-63226982</p>
-            <p>Mobile：+86-18137471420</p>
-            <p>Wechat：APANSE</p>
+            <p>Secretary: Jason Sun, Alex Liu</p>
+						<p>Email: icabst@apanse.com</p>
+            <p>Phone: 86-0371-63226982</p>
+            <p>Mobile: +86-18137471420</p>
+            <p>Wechat: APANSE</p>
         </ul>
     </div>
         <div class="clear"></div>
@@ -216,7 +216,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
