--- a/src/main/resources/templates/page/en/submission.html
+++ b/src/main/resources/templates/page/en/submission.html
@@ -35,7 +35,7 @@
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference On Advances in Biological<br/>
+              International Conference on Advances in Biological<br/>
 							Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
@@ -70,10 +70,10 @@
       <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Submission Guideline</div>
         <div class="public_p pb-20 pl-30">
-					<p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing at least 200 words.</p>
+					<p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing about 300-350 words.</p>
 					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
 					<p>3. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System</strong></u></a>. All required information is needed to finish the registration.</p>
-					<p>4. Or download the Registration Form, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
+					<p>4. Or download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
 					<p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
 					<p>5. All accepted abstracts will be printed in Conference Program and Abstract Book.</p>
 					<p>6. Please click to download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u><strong>"Abstract Templete"</strong></u></a>.</p>
@@ -82,12 +82,12 @@
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Presentation Type</div>
         <div class="public_p pb-20 pl-30">
           <p>
-            <strong>Oral Presentataion</strong>: Presenters will have 20-25 min (usually 17-20 min for presentation, 3-5 min for questions and answers). 
+            <strong>Oral Presentation</strong>: Presenters will have 20-25 min (usually 17-20 min for presentation, 3-5 min for questions and answers). 
           	Speakers are requested to submit a Power Point presentation, if any, one day before the allotted time.
           </p>
           <p>
-            <strong>Poster Presentataion</strong>: Posters will be displayed as a portrait of A1 (594mm width ×841mm length) size. 
-          	Presenters are requested to make the poster by themselves and hand it to conference secretary while check-in.
+            <strong>Poster Presentation</strong>: Posters will be displayed as a portrait of A1 (594mm width ×841mm length) size. 
+          	Presenters are requested to make the poster by themselves <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>(Poster Templete)</u></a> and hand it to conference secretary while check-in.
 						Presenter is required to stand by his/her poster. All presenters are responsible for removing their posters after presentation time.
           </p>
           <p>
@@ -143,11 +143,11 @@
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
-            <p>Secretary：Jason Sun, Alex Liu</p>
-						<p>Email：icabst@apanse.com</p>
-            <p>Phone：86-0371-63226982</p>
-            <p>Mobile：+86-18137471420</p>
-            <p>Wechat：APANSE</p>
+            <p>Secretary: Jason Sun, Alex Liu</p>
+						<p>Email: icabst@apanse.com</p>
+            <p>Phone: 86-0371-63226982</p>
+            <p>Mobile: +86-18137471420</p>
+            <p>Wechat: APANSE</p>
         </ul>
     </div>
       
@@ -161,7 +161,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
