--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -35,7 +35,7 @@
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference On Advances in Biological<br/>
+              International Conference on Advances in Biological<br/>
 							Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
@@ -73,7 +73,7 @@
                     <p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing at least 200 words.</p>
 					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
                     <p>3. You should fill all the information needed to finish the registration.</p>
-                    <p>4. Or you can download the Registration Form, fill the information needed and send it by email (icabst@apanse.com) with your abstract and CV.</p>
+                    <p>4. Or you can download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract and CV.</p>
                     <p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
             </div>
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Online Submission System</div>
@@ -82,7 +82,7 @@
                 <form class="layui-form layui-form-pane">
                     <div class="layui-card">
                         <div class="layui-form-item three-level-title">
-                            <strong>I, Personal Information（*required）</strong>
+                            <strong>I, Personal Information (*required)</strong>
                         </div>
 						
                         <div class="layui-form-item pr-20">
@@ -111,7 +111,7 @@
 							<label for="positionId" class="layui-form-label"><span class="x-red">*</span>Title</label>
 							<div id="positionId" class="layui-input-block">
 								<select name="position" lay-verify="required" lay-filter="aihao">
-								    <option value="0"></option>
+								    <option value="0">Please Select</option>
 									<option value="Prof.">Prof.</option>
 								    <option value="Dr.">Dr.</option>
 								    <option value="Mr.">Mr.</option>
@@ -205,7 +205,7 @@
 							<label for="dietaryId" class="layui-form-label">Dietary</label>
 							<div id="dietaryId" class="layui-input-block">
 								<select name="dietary" lay-filter="aihao">
-								    <option value="0"></option>
+								    <option value="0">Please Select</option>
 									<option value="No preference">No preference</option>
 								    <option value="Halal food">Halal food</option>
 								    <option value="Vegetarian">Vegetarian</option>
@@ -214,7 +214,7 @@
 						</div>
 
                         <div class="layui-form-item three-level-title">
-                            <strong>II, Invitation Letter Information（*required）</strong>
+                            <strong>II, Invitation Letter Information (*required)</strong>
                         </div>
 						
                         <div class="layui-form-item pr-20">
@@ -258,13 +258,13 @@
 						</div>
 						
                         <div class="layui-form-item three-level-title">
-                            <strong>III, Registration Details（*required）</strong>
+                            <strong>III, Registration Details (*required)</strong>
                         </div>
                         <div class="layui-form-item pr-20">
                             <label for="conferenceTypeId"  class="layui-form-label"><span class="x-red">*</span>Presentation Type</label>
                             <div id="conferenceTypeId" class="layui-input-block">
                                 <select name="conferenceType" lay-verify="required" lay-filter="aihao">
-                                    <option value="0"></option>
+                                    <option value="0">Please Select</option>
 									<option value="Oral">Oral Presentation</option>
                                     <option value="Poster">Poster Presentation</option>
                                     <option value="Listener">Listeners</option>
@@ -277,7 +277,7 @@
                             <label for="registerTypeId"  class="layui-form-label"><span class="x-red">*</span>Registration Type</label>
                             <div id="registerTypeId" class="layui-input-block">
                                 <select name="registerType" lay-verify="required" lay-filter="aihao">
-									<option value="0"></option>
+									<option value="0">Please Select</option>
 									<option value="Regular">Non Student-Standard-450USD (Befor Oct. 31)</option>
 									<option value="Late">Non Student-Late-520USD (After Oct. 31)</option>
 									<option value="Student-Regular">Student-Standard-400USD (Befor Oct. 31)</option>
@@ -292,7 +292,7 @@
                             <label for="paymentId"  class="layui-form-label"><span class="x-red">*</span>Payment Method</label>
                             <div id="paymentId" class="layui-input-block">
                                 <select name="payment" lay-verify="required" lay-filter="aihao">
-                                    <option value="0"></option>
+                                    <option value="0">Please Select</option>
 									<option value="对公转账">Bank Transfer</option>
 									<option value="个人转账">PayPal</option>
 									<option value="现场支付">Cash On-site (only apply for Late Registration Type)</option>
@@ -306,7 +306,7 @@
 						            <option value="0"></option>
 									<option value="无需发票">无需发票</option>
 									<option value="国际发票">国际发票</option>
-									<option value="国内发票">国内发票（需额外缴纳6%税费）</option>
+									<option value="国内发票">国内发票 (需额外缴纳6%税费)</option>
 									<option value="暂不需要">暂时不需要，需要时再开</option>
 						        </select>
 						    </div>
@@ -315,7 +315,7 @@
                             <label for="issueId"  class="layui-form-label">Session</label>
                             <div id="issueId" class="layui-input-block">
                                 <select name="issue" lay-filter="aihao">
-                                    <option value="0"></option>
+                                    <option value="0">Please Select</option>
 									<option value="Session 1">1. Molecular Biology</option>
 									<option value="Session 2">2. Biomedicine, Biopharmaceuticals and Pharmacology</option>
 									<option value="Session 3">3. Biomechanics and Biomechanical Engineering</option>
@@ -387,9 +387,9 @@
 				<div class="pb-10">
         <ul>
             <p>Abstract Deadline: Oct. 20, 2019</p>
-						<p>Reg. Deadline: Oct. 31, 2019</p>
-						<p>Acceptance: 7-10 working days</p>
-						<p>Conf. Date: Dec. 26-28, 2019</p>
+			<p>Reg. Deadline: Oct. 31, 2019</p>
+			<p>Acceptance: 7-10 working days</p>
+			<p>Conf. Date: Dec. 26-28, 2019</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
@@ -400,11 +400,11 @@
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
-            <p>Secretary：Jason Sun, Alex Liu</p>
-						<p>Email：icabst@apanse.com</p>
-            <p>Phone：86-0371-63226982</p>
-            <p>Mobile：+86-18137471420</p>
-            <p>Wechat：APANSE</p>
+            <p>Secretary: Jason Sun, Alex Liu</p>
+			<p>Email: icabst@apanse.com</p>
+            <p>Phone: 86-0371-63226982</p>
+            <p>Mobile: +86-18137471420</p>
+            <p>Wechat: APANSE</p>
         </ul>
     </div>
     
@@ -417,7 +417,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
