--- a/src/main/resources/templates/page/en/venue.html
+++ b/src/main/resources/templates/page/en/venue.html
@@ -35,7 +35,7 @@
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference On Advances in Biological<br/>
+              International Conference on Advances in Biological<br/>
 							Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
@@ -69,15 +69,15 @@
     <div class="page_left col-6-6" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">&nbsp;&nbsp;Venue</div>
       <div class="public_p pb-20 pl-30">
-				<p class="f-b">Hotel Name：The Tawana Bangkok, <a class="pointer" href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a><br/>
-				Address：80 Surawongse Road, Bangrak, Bankok 10500 Thailand<br/>
+				<p class="f-b">Hotel Name: The Tawana Bangkok, <a class="pointer" href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a><br/>
+				Address: 80 Surawongse Road, Bangrak, Bankok 10500 Thailand<br/>
 				Conference Room: Murano Room<br/>
 				You could book the room by <a href="https://www.booking.com/hotel/th/tawana.zh-cn.html?aid=1633942;label=baidu-brand-list1;sid=a0ff97e5e37d5edbc4ed57d5453febf3;dest_id=-3414440;dest_type=city;dist=0;hapos=1;hpos=1;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1560999642;srpvid=de89152dd7440131;type=total;ucfs=1&#hotelTmpl" style="color: #102cf7" target="_blank"><u>www.booking.com</u></a>
 				</p>
 				<p>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Tawana Bangkok on Surawongse Road is renowned not only for its high standard of efficient and friendly service but also for its prime downtown location. 
-					For leisure and holiday guests, the hotel’s central location affords convenient travel to most of Bangkok’s finest shopping, sightseeing attractions and entertainment facilities as well as being just footsteps away from the city’s skytrain BTS Silom (Saladaeng Station) and MRT subway Rama 4 (Samyan Station).
-					To meet the demands of the business traveler, The Tawana Bangkok offers unrivaled advantages. The fully equipped Business Center at the lobby provides the busy executive with the convenience of a secretary and a Boardroom for meetings. Hi-Speed WiFi (Wireless Internet) is available throughout the hotel, allowing “connection” in the guestroom, at the poolside, restaurants, or hotel’s Lobby. 
+					For leisure and holiday guests, the hotel's central location affords convenient travel to most of Bangkok's finest shopping, sightseeing attractions and entertainment facilities as well as being just footsteps away from the city's skytrain BTS Silom (Saladaeng Station) and MRT subway Rama 4 (Samyan Station).
+					To meet the demands of the business traveler, The Tawana Bangkok offers unrivaled advantages. The fully equipped Business Center at the lobby provides the busy executive with the convenience of a secretary and a Boardroom for meetings. Hi-Speed WiFi (Wireless Internet) is available throughout the hotel, allowing "connection" in the guestroom, at the poolside, restaurants, or hotel's Lobby. 
 					</p>
 					<ul>
 						<li><img src="../img/meeting-events-01.jpg" height="400px"><img src="../img/meeting-events-02.jpg" height="400px"><img src="../img/meeting-events-03.jpg" height="400px" width="299px"><img src="../img/meeting-events-04.jpg" height="400px" width="601px"></li>
@@ -89,18 +89,18 @@
 			<div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">Path</div>
         <div class="public_p pl-30">
 				<p>
-					<strong>1. From Suvarnabhumi Airport：</strong><br/>
+					<strong>1. From Suvarnabhumi Airport: </strong><br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;①Take Airport Express Line to <strong>Phaya Thai station</strong><br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;②Then transfer BTS Sukhumvit Line (Kheha direction) to <strong>Siam station</strong><br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;③Then transfer BTS Silom Line(Bangwa direction) to <strong>Sala Daeng Station</strong><br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;④Walk to <strong>The Tawana Bangkok</strong>
 				</p>
 				<p>
-					<strong>2. From Don Mueang International Airport：only bus could be taken by the arrvial gate 6</strong><br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A1 bus to Chatuchak station，and transfer BTS<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A2 bus to Victory Monument station，and transfer BTS<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A3 bus to Lumphini Park station，and transfer MRT<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A4 bus to Sanamluang station，no BTS nor MRT, but close to view spots like Grand Palace<br/>
+					<strong>2. From Don Mueang International Airport: only bus could be taken by the arrvial gate 6</strong><br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A1 bus to Chatuchak station, and transfer BTS<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A2 bus to Victory Monument station, and transfer BTS<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A3 bus to Lumphini Park station, and transfer MRT<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Take A4 bus to Sanamluang station, no BTS nor MRT, but close to view spots like Grand Palace<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A5 bus is running to Future Park Rangsit station which is in opposite direction to downtown
 				</p>
 				<p><strong>3. Please tell the driver "by meter" if you would like to take a taxi</strong></p>
@@ -125,7 +125,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
