--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -120,7 +120,7 @@
         <div class="url pd-5">
           <ul>
             <li ><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</strong></a></li>
-            <li ><a class="announcement" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
+            <li ><a class="announcement" href="/cn/download" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
             <li ><a class="invitation" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
 						<li ><a class="article" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
           </ul>
