修改下载方式

--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -120,8 +120,8 @@
         <div class="url pd-5">
           <ul>
             <li ><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</strong></a></li>
-            <li ><a class="announcement" href="/cn/download" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
-            <li ><a class="invitation" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
+            <li ><a class="announcement" href="/cn/download/meetingPropaganda.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
+            <li ><a class="invitation" href="/cn/download/Rrgistration.docx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
 						<li ><a class="article" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
           </ul>
           <div class="clear"></div>
@@ -133,7 +133,7 @@
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
 			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article/" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
 					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
